manifests/service.yaml
# manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-demo
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nginx
